# Bridge-Parsers

./: .gitignore  CLAUDE.md  Cargo.toml  README-BBO-CSV.md  README.md
.github/workflows/: ci.yml
src/: dd_analysis.rs  error.rs  lib.rs  main.rs  tinyurl.rs
src/acbl/: mod.rs
src/bws/: mod.rs  reader.rs  tables.rs
src/lin/: mod.rs
src/model/: board.rs  card.rs  deal.rs  hand.rs  mod.rs  scoring.rs
src/pbn/: mod.rs  reader.rs  writer.rs
src/xlsx/: mod.rs  writer.rs
tests/: dd_analysis_test.rs
tests/fixtures/input/: 1768880456-bJwUQdVmhY@260119HandRecord.pbn  1768880456-bJwUQdVmhY@260119M.BWS
