[package]
name = "bridge-parsers"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "Read and write bridge file formats (PBN, BWS) with CLI for conversion"

[dependencies]
nom = "8.0"
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "2.0"
anyhow = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rust_xlsxwriter = "0.79"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.22"
regex = "1.10"
lazy_static = "1.5"
url = "2.5"
rayon = "1.10"
bridge-types = { git = "https://github.com/Rick-Wilson/bridge-types" }
bridge-encodings = { git = "https://github.com/Rick-Wilson/bridge-encodings" }
bridge-solver = { git = "https://github.com/Rick-Wilson/bridge-solver" }

[[bin]]
name = "bbo-csv"
path = "src/bin/bbo_csv.rs"

[[bin]]
name = "dd-debug"
path = "src/bin/dd_debug.rs"

[dev-dependencies]
tempfile = "3"
